<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.CourseActivity"
    tools:showIn="@layout/activity_course">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:id="@+id/titleLabel"
            style="@style/AppTheme.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/title" />

        <EditText
            android:id="@+id/titleEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/title"
            android:hint="@string/title"
            android:inputType="textNoSuggestions" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:stretchColumns="0,1,2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/startDateLabel"
                    style="@style/AppTheme.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_label" />

                <TextView
                    android:id="@+id/endDateLabel"
                    style="@style/AppTheme.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_label" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/startDateEditor"
                    style="@style/AppTheme.TextViewEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date"
                    android:onClick="showStartDatePicker" />

                <TextView
                    android:id="@+id/endDateEditor"
                    style="@style/AppTheme.TextViewEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date"
                    android:onClick="showEndDatePicker" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/startDateAlertCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert" />

                <CheckBox
                    android:id="@+id/endDateAlertCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/statusLabel"
            style="@style/AppTheme.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <Spinner
            android:id="@+id/statusSpinner"
            style="@style/AppTheme.TextViewEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/course_statuses" />

        <TextView
            android:id="@+id/termLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/term"
            style="@style/AppTheme.Label" />

        <Spinner
            android:id="@+id/termSpinner"
            style="@style/AppTheme.TextViewEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notesLabel"
                style="@style/AppTheme.Label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/notes" />

            <Button
                android:id="@+id/shareNotesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_margin"
                android:background="@color/colorPrimary"
                android:drawableStart="@android:drawable/ic_menu_share"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="12dp"
                android:text="@string/share"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:onClick="shareNotes" />

        </LinearLayout>

        <EditText
            android:id="@+id/notesEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/notes"
            android:hint="@string/notes_hint"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/assessmentsLabel"
            style="@style/AppTheme.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assessments" />

        <LinearLayout
            android:id="@+id/assessmentListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CheckBox" />

        </LinearLayout>

        <TextView
            android:id="@+id/mentorsLabel"
            style="@style/AppTheme.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mentors" />

        <LinearLayout
            android:id="@+id/mentorListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CheckBox" />

        </LinearLayout>

        <TextView
            android:id="@+id/mentorsNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assessments_note"
            android:textSize="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/list_item_padding"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="save"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>