<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AssessmentActivity"
    tools:showIn="@layout/activity_assessment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/title"
            style="@style/AppTheme.Label" />

        <EditText
            android:id="@+id/titleEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/typeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            style="@style/AppTheme.Label" />

        <RadioGroup
            android:id="@+id/typeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/objectiveCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/objective" />

            <RadioButton
                android:id="@+id/performanceCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/performance" />
        </RadioGroup>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/dueDateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/due_date_label"
                    style="@style/AppTheme.Label" />

                <TextView
                    android:id="@+id/goalDateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/goal_date_label"
                    style="@style/AppTheme.Label" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/dueDateEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/due_date"
                    android:onClick="showDueDatePicker"
                    style="@style/AppTheme.TextViewEditor" />

                <TextView
                    android:id="@+id/goalDateEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/goal_date"
                    android:onClick="showGoalDatePicker"
                    style="@style/AppTheme.TextViewEditor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/dueDateAlertCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert" />

                <CheckBox
                    android:id="@+id/goalDateAlertCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/courseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course"
            style="@style/AppTheme.Label" />

        <Spinner
            android:id="@+id/courseSpinner"
            style="@style/AppTheme.TextViewEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/label_margin"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="save"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>