<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/termsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="showTerms"
        android:text="@string/terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/coursesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="showCourses"
        android:text="@string/courses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termsButton" />

    <Button
        android:id="@+id/assessmentsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="showAssessments"
        android:text="@string/assessments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coursesButton" />

    <Button
        android:id="@+id/mentorsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="showMentors"
        android:text="@string/mentors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assessmentsButton" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="generateSampleData"
        android:text="@string/generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mentorsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>