<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.TermActivity"
    tools:showIn="@layout/activity_term">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            style="@style/AppTheme.Label" />

        <EditText
            android:id="@+id/titleEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textPersonName" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:stretchColumns="0,1,2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/startDateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_label"
                    style="@style/AppTheme.Label" />

                <TextView
                    android:id="@+id/endDateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_label"
                    style="@style/AppTheme.Label" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/startDateEditor"
                    style="@style/AppTheme.TextViewEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date"
                    android:onClick="showStartDatePicker" />

                <TextView
                    android:id="@+id/endDateEditor"
                    style="@style/AppTheme.TextViewEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date"
                    android:onClick="showEndDatePicker" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/courseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            style="@style/AppTheme.Label" />

        <LinearLayout
            android:id="@+id/courseListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CheckBox" />
        </LinearLayout>

        <TextView
            android:id="@+id/coursesNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/courses_note"
            android:textSize="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/list_item_padding"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="save"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>